# ros2-humble-docker-ml-robotics-nav2-fastapi

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
docker/: Dockerfile.gpu  entrypoint.sh
docs/: LINKEDIN_POST.md  TESTING_RESULTS.md
models/: .gitkeep
scripts/: start_ros_gui.ps1  validate_ros_env.sh
src/nav2_bringup/: docker-compose.yml
src/nav2_bringup/maps/: .gitkeep
src/nav2_bringup/params/: nav2_params.yaml
src/nav2_bringup/rviz/: .gitkeep
src/ros_fastapi_bridge/: package.xml  setup.cfg  setup.py
src/ros_fastapi_bridge/ros_fastapi_bridge/: __init__.py  bridge_node.py
src/sample_cpp_pkg/: CMakeLists.txt  package.xml
src/sample_cpp_pkg/launch/: talker_listener.launch.py
src/sample_cpp_pkg/src/: listener_node.cpp  talker_node.cpp
src/sample_py_pkg/: package.xml  setup.cfg  setup.py
src/sample_py_pkg/launch/: sensor_fusion.launch.py
src/sample_py_pkg/sample_py_pkg/: __init__.py  gpu_inference_stub.py  sensor_fusion_node.py  sensor_publisher.py
